force-app/main/default/objects/Document_Metadata__c/Document_Metadata__c.object-meta.xml
<CustomObject>
    <label>Process Document Metadata</label>
    <nameField>
        <label>Document Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Document Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>