force-app/main/default/objects/Document_Metadata__c/fields/Digitally_Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Digitally_Verification_Method__c</fullName>
    <label>Digitally Verification Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Digitally_Verification_Method</valueSetName>
    </valueSet>
</CustomField>