force-app/main/default/objects/Document_Metadata__c/fields/DMS_System__c.field-meta.xml
<CustomField>
    <fullName>DMS_System__c</fullName>
    <label>DMS System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DMS_System_Name</valueSetName>
    </valueSet>
</CustomField>