force-app/main/default/objects/Document_Metadata__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <label>Document Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>