force-app/main/default/objects/Document_Metadata__c/fields/Document_Id_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Id_Name__c</fullName>
    <label>Document Id Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>