force-app/main/default/objects/Document_Metadata__c/fields/Is_DocumentId_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_DocumentId_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is DocumentId Mandatory</label>
    <type>Checkbox</type>
</CustomField>