force-app/main/default/objects/Document_Metadata__c/fields/Is_Masking_Compulsory__c.field-meta.xml
<CustomField>
    <fullName>Is_Masking_Compulsory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Masking Compulsory</label>
    <type>Checkbox</type>
</CustomField>