force-app/main/default/objects/Document_Metadata__c/fields/Related_To_sObject__c.field-meta.xml
<CustomField>
    <fullName>Related_To_sObject__c</fullName>
    <label>Related To sObject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sObjectName</valueSetName>
    </valueSet>
</CustomField>