force-app/main/default/objects/Document_Metadata__c/fields/Upload_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Upload_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Mandatory</label>
    <type>Checkbox</type>
</CustomField>