force-app/main/default/objects/Document_Metadata__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Digitally_Verification_Method__c</columns>
    <columns>DMS_System__c</columns>
    <columns>Document_Category__c</columns>
    <columns>Is_DocumentId_Mandatory__c</columns>
    <columns>Is_Masking_Compulsory__c</columns>
    <columns>Document_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Multile_DM_Allowed__c</columns>
    <columns>Physical_Document_Mandatory__c</columns>
    <columns>Related_To_sObject__c</columns>
    <columns>Upload_Mandatory__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>